Google analytics ID added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
       "contentlayer/generated": ["./.contentlayer/generated"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".contentlayer/generated"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".contentlayer/generated", "pages/sitemap.xml.js"],
   "exclude": ["node_modules"]
 }
